--- a/views/base.html
+++ b/views/base.html
@@ -7,14 +7,21 @@
         <meta name="author" content="Sara Ragel" />
         <meta name="description"
         content="Una app sencilla donde los usuarios pueden colgar sus quejas"/>
+        <link rel="stylesheet" href="/static/styles.css">
         <title>Quejas</title>
     </head>
     <body>
         <header>
             <nav>
-                <ul>
+                <ul class="nav">
                     <li>
-                        <!--<a>que me lleve a nuevo mensaje</a>-->
+                        <a href="/new">Escribe una nueva queja!</a>
+                    </li>
+                    <li>
+                        <a href="/login"> Inicia sesión para poner tu queja! </a>
+                    </li>
+                    <li>
+                        <a href="/">Volver al inicio</a>
                     </li>
                 </ul>
             </nav>
