--- a/views/newmessage.html
+++ b/views/newmessage.html
@@ -4,7 +4,7 @@
 
 <form action="/queja" method="POST">
     <label for="queja"></label>
-    <textarea name="queja"></textarea>
+    <textarea placeholder="Escribe tu queja!" name="keja"></textarea>
     <button type="submit">Subir</button>
 </form>
 
