--- a/views/login.html
+++ b/views/login.html
@@ -2,10 +2,10 @@
 
 {% block article %}
 
-<form action="/login" method="POST">
-    <label for="username">Usuario</label>
+<form action="/queja" method="POST">
+    <label for="username">Usuario:</label>
     <input type="text" name="username"/>
-    <label for="password">Contraseña</label>
+    <label for="password">Contraseña:</label>
     <input type="password" name="password"/>
     <button type="submit">Iniciar sesión</button>
 </form>
