--- a/static/styles.css
+++ b/static/styles.css
@@ -3,6 +3,7 @@
     background-color: #F2EFE9;
     color: #252627;
     justify-content: center;
+    justify-items: center;
 }
 .queja {
     border: #252627 solid;
@@ -11,8 +12,12 @@
     margin: 2.5px;
     border-radius: 10px;
 }
-
-li {
+.nav {
     display: flex;
-    align-content: center;
+    list-style: none;
+}
+li {
+    padding-left: 20px;
+    padding-right: 20px;
+    
 }
