--- a/views/base.html
+++ b/views/base.html
@@ -9,9 +9,12 @@
     <meta name="description" content="Una app sencilla donde los usuarios pueden colgar sus quejas" />
     <link rel="stylesheet" href="/static/styles.css">
     <title>Quejas</title>
+    <script>
+        // si la conexión es exitosa, hacer algo
+    </script>
 </head>
 
-<body>
+<body> 
     <header>
         <nav>
             <ul>
