--- a/views/base.html
+++ b/views/base.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/static/styles.css">
     <title>Quejas</title>
     <script>
-        // si la conexión es exitosa, hacer algo
+        // js en el lado del cliente
     </script>
 </head>
 
