added some more stuff abut sessions

--- a/views/queja.html
+++ b/views/queja.html
@@ -5,7 +5,7 @@
 <section>
     <div class="queja">
         <p>{{ complain.body }}</p> 
-        <p>{{ complain.date }}</p> 
+        <p>{{ dateFormat(complain.date) }}</p> 
     </div>
 </section>
 
