--- a/views/base.html
+++ b/views/base.html
@@ -18,14 +18,18 @@
     <header>
         <nav>
             <ul>
-                <li class="nav">
+                <li class="bold" class="nav">
                     <a href="/new">Escribe una nueva queja!</a>
                 </li>
-                <li class="nav">
+                <li class="bold" class="nav">
                     <a href="/login"> Inicia sesión para poner tu queja! </a>
                 </li>
-                <li class="nav">
+                <li class="bold" class="nav">
                     <a href="/">Volver al inicio</a>
+                </li>
+                <li>
+                    <label class="bold" for="search">Busca una queja:</label>
+                    <input type="text" name="search" placeholder="Buscar"/>
                 </li>
             </ul>
         </nav>
