--- a/views/newmessage.html
+++ b/views/newmessage.html
@@ -3,7 +3,7 @@
 {% block article %}
 
 <form action="/queja" method="POST">
-    <label for="queja"></label>
+    <label for="keja">Nueva queja:</label>
     <textarea placeholder="Escribe tu queja!" name="keja"></textarea>
     <button type="submit">Subir</button>
 </form>
