--- a/views/login.html
+++ b/views/login.html
@@ -2,7 +2,7 @@
 
 {% block article %}
 
-<form action="/queja" method="POST">
+<form action="/login" method="POST">
     <label for="username">Usuario:</label>
     <input type="text" name="username"/>
     <label for="password">Contraseña:</label>
