--- a/views/queja.html
+++ b/views/queja.html
@@ -4,7 +4,7 @@
 
 <section>
     <div class="queja">
-        <p>{{ complain.body }}</p> 
+        <p class="body">{{ complain.body }}</p> 
         <p>{{ dateFormat(complain.date) }}</p> 
     </div>
 </section>
