Separando los modelos y las bases de datos del js principal, aún no está terminado

--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
 {% block article %}
 <h1>Aquí están todas las quejas 💅</h1>
 
-{% for complain in complains %}
+{% for queja in quejas %}
 <article>
     <div class="queja">
         <p class="body">{{complain.body}}</p> 
