volviendo un poco atrás porq tenía un cristo montao

--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
 {% block article %}
 <h1>Aquí están todas las quejas 💅</h1>
 
-{% for queja in quejas %}
+{% for complain in complains %}
 <article>
     <div class="queja">
         <p class="body">{{complain.body}}</p> 
