--- a/views/base.html
+++ b/views/base.html
@@ -19,19 +19,19 @@
         <nav>
             <ul>
                 <li class="bold" class="nav">
-                    <a href="/new">Escribe una nueva queja!</a>
-                </li>
-                <li class="bold" class="nav">
-                    <a href="/login"> Inicia sesión para poner tu queja! </a>
-                </li>
-                <li class="bold" class="nav">
-                    <a href="/">Volver al inicio</a>
-                </li>
-                <li class="bold" class="nav">
                     <a href="/newuser">Registrarse</a>
                 </li>
                 <li class="bold" class="nav">
+                    <a href="/login">Iniciar sesión</a>
+                </li>
+                <li class="bold" class="nav">
                     <a href="/#">Cerrar sesión</a>
+                </li>
+                <li class="bold" class="nav">
+                    <a href="/new">Escribe una nueva queja!</a>
+                </li>
+                <li class="bold" class="nav">
+                    <a href="/">Volver al inicio</a>
                 </li>
                 <li>
                     <label class="bold" for="search">Busca una queja:</label>
