--- a/views/base.html
+++ b/views/base.html
@@ -25,7 +25,7 @@
                     <a href="/login">Iniciar sesión</a>
                 </li>
                 <li class="bold" class="nav">
-                    <a href="/#">Cerrar sesión</a>
+                    <a href="/logout">Cerrar sesión</a>
                 </li>
                 <li class="bold" class="nav">
                     <a href="/new">Escribe una nueva queja!</a>
