--- a/views/newmessage.html
+++ b/views/newmessage.html
@@ -6,6 +6,7 @@
     <label for="keja">Nueva queja:</label>
     <textarea class="input" placeholder="Escribe tu queja!" name="keja"></textarea>
     <button type="submit">Subir</button>
+    <!-- modificar para q me devuelva imagen q -->
 </form>
 
 {% endblock article %}
