--- a/views/base.html
+++ b/views/base.html
@@ -14,7 +14,7 @@
     </script>
 </head>
 
-<body> 
+<body>
     <header>
         <nav>
             <ul>
@@ -34,8 +34,8 @@
                     <a href="/">Volver al inicio</a>
                 </li>
                 <li>
-                    <label class="bold" for="search">Busca una queja:</label>
-                    <input class="input" type="text" name="search" placeholder="Buscar"/>
+                    <label name="search-bar" class="bold" for="search">Busca una queja:</label>
+                    <input class="input" type="text" name="search" placeholder="Buscar" />
                     <!--<button type="search">Buscar</button>-->
                 </li>
             </ul>
